nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/common-ui.css
/* ... */
textarea {
    background-color: #eaeef0;
    border: 1px solid #eaeef0;
    font-family: Roboto, sans-serif;
    font-size: 13px !important;
    padding: 10px 10px;
    resize: vertical;
    height: 32px;
    width: 100%;
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box; /* Firefox, other Gecko */
    box-sizing: border-box;
    color: #262626;
    white-space: pre-wrap;
    overflow-y: auto;
    overflow-x: hidden;
    text-overflow: ellipsis;
}

textarea[disabled] {
    background: #b2b8c1;
    color: #dbdee2;
    border: 1px solid #b2b8c1;
}

ul.property-info {
    list-style-type: disc;
    margin-left: 10px;
}

ul.property-info li {
    padding: 0px 0px;
    margin-left: 10px;
}

div.nf-checkbox {
    cursor: pointer;
    width: 12px;
    height: 12px;
    float: left;
    margin-right: 4px;
}

.nf-checkbox-label {
    cursor: pointer;
}

div.nf-checkbox.disabled {
    opacity: .5;
    cursor: not-allowed;
}

div.checkbox-unchecked {
    background: transparent url(../images/inputCheckbox.png) no-repeat scroll top left;
}

div.checkbox-checked {
    background: transparent url(../images/inputCheckbox.png) no-repeat scroll top right;
}

div.ajax-loading {
    background-image: url(../images/iconLoading.gif);
}

div.ajax-complete:before {
    font-family: FontAwesome;
    content: "\f00c";
    font-size: 16px;
    color: #70B59A;
}

div.ajax-error:before {
    font-family: FontAwesome;
    content: "\f00d";
    font-size: 16px;
    color: #D18686;
}

.refresh-button {
    float: left;
}

.ui-draggable .dialog-header {
    cursor: move;
}

span.link:focus {
    outline: none;
}

span.link {
    cursor: pointer;
    color: #004849; /*link-color*/
    font-weight: normal;
    display: inline-block;
    border-bottom: 1px solid #CCDADB;
    font-size: 13px;
    font-family: Roboto;
}

span.link-over {
    border-bottom: 1px solid #004849;
}

span.link-bold {
    font-weight: bold;
    border-bottom: none;
}

button {
    height: 28px;
    width: 28px;
    border: 1px solid #CCDADB; /*tint link-color 80%*/
    background-color: rgba(249, 250, 251, 0.97);
    color: #004849;
}

button.refresh-button {
    font-size: 16px;
}

button:hover {
    border: 1px solid #004849; /*link-color*/
}

button:disabled {
    color: #CCDADB !important; /*tint link-color 80%*/
    cursor: not-allowed;
    border: 1px solid #CCDADB; /*tint link-color 80%*/
}

/* angular material override */

button:focus {
    outline: none;
}

div:focus {
    outline: none;
}

input:focus {
    background-color: #fff;
    border: 1px solid #004849; /*link-color*/
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
    outline: none;
}

/* filter controls */

.filter-controls {
    position: absolute;
    top: 10px;
}

.filter-container {
    height: 32px;
    width: 100%;
    float: left;
}

.filter {
    margin-right: 3px;
    float: left;
}

input.filter {
    width: 173px;
}

.filter-type,
.filter-status-dropdown {
    float: left;
    width: 148px;
}

.filter-status {
    margin-top: 10px;
    color: #775351;
    font-family: Roboto;
    font-size: 13px;
    font-weight: 500;
    margin-bottom: 5px;
}

.filter-status-dropdown {
    margin-left: 5px;
}

.summary-filter-primary-node-container {
    display: inline-block;
    margin-left: 10px;
    margin-top: 8px;
    width: auto;
}

/* overlay icon styles */

.stop-configure-icon.fa-stop {
    display : inline-block;
    font-size: 15px;
    position : relative;
    top : -1px;
}

.stop-configure-icon::after {
    content : "\f013";
    font-size: 14px;
    position : relative;
    top : 0px;
    left : -8px;
    color : #ffffff;
    -webkit-text-stroke-width : 1px;
    -webkit-text-stroke-color : #004849;

}

*.stop-configure-icon + span {
    display : inline-block;
    padding  : 0px 0px 0px 0px;
    margin-left  : -10px;
}

/* buttons */

button.fa {
    color: #004849;
    font-size: 16px;
    cursor: pointer;
    line-height: 25px;
}

button.icon {
    color: #004849;
    font-size: 16px;
}

div.button-icon span {
    padding-left: 5px;
    vertical-align: middle;
    font-style: normal;
    font-family: Roboto;
    font-size: 11px;
}

div.button-icon {
    float: left !important;
    margin-left: 20px;
    font-size: 18px !important;
}

div.button.auto-width,
div.button-icon.auto-width {
    width : auto !important;
}

div.button {
    height: 32px;
    width: 90px;
    padding: 0 8px;
    text-transform: uppercase;
    font-weight: 500;
    font-size: 11px;
    line-height: 33px;
    text-align: center;
    border: 0px;
    float: right;
    position: relative;
    background: #728E9B;
    color: #fff;
    cursor: pointer;
}

div.button.disabled-button {
    color: #a8a8a8 !important;
    cursor: not-allowed;
    opacity: 0.7;
}

div.button:hover:not(.disabled-button) {
    background-color: #004849;
}

div.secondary-button {
    height: 32px;
    width: 90px;
    padding: 0 8px;
    text-transform: uppercase;
    font-weight: 500;
    font-size: 11px;
    line-height: 33px;
    text-align: center;
    border: 0px;
    float: right;
    position: relative;
    background: #E3E8EB;
    color: #004849;
    cursor:pointer
}

div.secondary-button:hover {
    background-color: #C7D2D7;
}

/* tooltips */

.qtip-nifi {
    border: 0px !important;
    border-radius: 2px;
    background-color: rgba(0, 0, 0, 0.54) !important;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
    font-family: Roboto;
    font-weight: 500;
    font-size: 13px;
    color: #fff !important;
}

div.nifi-tooltip {
    border: 0px !important;
    border-radius: 2px;
    background-color: rgba(0, 0, 0, 0.80) !important;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
    font-family: Roboto;
    font-weight: 500;
    font-size: 13px;
    color: #fff !important;
    max-width: 500px;
    word-wrap: break-word;
}

.scrollable {
    border-bottom: 1px solid #d0dbe0;
}
/* ... */

